# BasicSolarSystem

./: CMakeLists.txt  README.md
include/: Planet.h  SolarSystem.h
src/: Planet.cpp  SolarSystem.cpp  main.cpp
